Fixed z-index of header image

--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -136,7 +136,6 @@ b{
     .headerImgBorder{
         position: relative;
         top: 0;
-        z-index: 1;
 
         height: $size;
         width: $size;
